--- a/Hexa.NET.OpenAL/Hexa.NET.OpenAL.csproj
+++ b/Hexa.NET.OpenAL/Hexa.NET.OpenAL.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net7.0;net8.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>net9.0;net8.0;net7.0;net6.0;netstandard2.1;netstandard2.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -15,7 +15,7 @@
 
 		<PackageId>Hexa.NET.OpenAL</PackageId>
 		<AssemblyVersion>1.23.1</AssemblyVersion>
-		<PackageVersion>1.2.0</PackageVersion>
+		<PackageVersion>1.2.1</PackageVersion>
 		<Description>A .NET Wrapper for OpenAL Soft (1.23.1), generated with the HexaGen code generator. HexaGen allows users to access native libraries easily and with high performance.</Description>
 		<PackageTags>OpenAL OpenAL-Soft Soft Hexa HexaGen Source Generator C# .NET DotNet Sharp Windows macOS Android Bindings Wrapper Native</PackageTags>
 		<Authors>Juna Meinhold</Authors>
@@ -33,7 +33,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="HexaGen.Runtime" Version="1.1.13" />
+		<PackageReference Include="HexaGen.Runtime" Version="1.1.16" />
 	</ItemGroup>
 
 	<ItemGroup>
